--- a/src/utilities/contrast.css
+++ b/src/utilities/contrast.css
@@ -4,5 +4,5 @@
   background-color: var(--contrast-bg);
   /* This swaps between white or black based on the background color. */
   /* After testing against all RGB background colors, 49.44 minimizes the number of WCAG 4.5:1 contrast failures. */
-  color: lch(from var(--contast-bg) calc((49.44 - l) * infinity) 0 0);
+  color: lch(from var(--contrast-bg) calc((49.44 - l) * infinity) 0 0);
 }
